--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ description: every day leads to a change
 #   line in _config.yml. It will appear in your document head meta (for
 #   Google search results) and in your feed.xml site description.
 
-# baseurl: "" # the subpath of your site, e.g. /blog/
-# url: "http://yourdomain.com" # the base hostname & protocol for your site
+baseurl: "/blog/" # the subpath of your site, e.g. /blog/
+url: "http://blacksungrass.github.io" # the base hostname & protocol for your site
 # twitter_username: jekyllrb
 github_username:  blacksungrass
 permalink: /:year/:month/:day/:title/
